# lubelogger-telegram-bot

./: .env.example  .releaserc.json  Dockerfile  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  conventional-commits.yml  publish-image.yml  release.yml
.kiro/hooks/: lint-python-on-save.json  run-tests-after-task.json
.kiro/specs/lubelogger-telegram-bot/: .config.kiro  (+4 more)
.kiro/steering/: python-standards.md  testing-strategy.md
bot/: __init__.py  commands.py  config.py  exceptions.py  i18n.py  main.py
bot/handlers/: fuel.py  odometer.py  query.py  service.py  settings.py  vehicle.py
bot/locales/: __init__.py  en.json  it.json
bot/middleware/: __init__.py  auth.py
bot/models/: __init__.py  inputs.py  payloads.py  responses.py  validators.py
bot/services/: command_parser.py  config_store.py  conversation.py  database.py  keyboard.py  lubelogger_client.py  metrics.py  queue_service.py
tests/: __init__.py  test_api_key_leakage.py  test_auth_filter.py  test_command_parser.py  test_command_parser_properties.py  test_commands.py  test_config.py  test_config_store.py  test_config_store_smoke.py  test_confirmation.py  test_conversation.py  test_exceptions.py  test_flow_integration.py  test_handlers_unit.py  test_i18n.py  test_integration.py  test_keyboard.py  test_lubelogger_client.py  test_metrics.py  test_onboarding.py  test_payload_serialization.py  test_query_handler.py  test_queue_service.py  test_settings_handler.py  test_validators.py  test_validators_properties.py
(+5 files in other folders)
